fix: Move overflow controls higher in the flow

--- a/components/css/buckyless/directives/main-menu.less
+++ b/components/css/buckyless/directives/main-menu.less
@@ -147,7 +147,6 @@ frame-page .wrapper__frame-page {
     @media (min-width: @sm) {
       .wrapper__push-content {
         position: relative;
-        overflow-x: hidden;
 
         .content-wrapper__push-content {
           flex: inherit;
