--- a/components/css/buckyless/general.less
+++ b/components/css/buckyless/general.less
@@ -19,6 +19,11 @@
 
 /* General MyUW Styles */
 
+body {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 a {
   transition: @transition-color;
 
